--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-gunzip",
   "version": "0.0.0",
-  "description": "Uncompress gzip files in your [gulp](http://gulpjs.com) build pipeline",
+  "description": "Uncompress gzip files in your gulp build pipeline",
   "main": "index.js",
   "dependencies": {
     "gulp-util": "~2.2.14",
@@ -16,7 +16,7 @@
     "jshint": "~2.5.0"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --reporter spec"
   },
   "author": "Jon Merrifield",
   "license": "MIT",
